fix: use patch -p1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install gcc-aarch64-linux-gnu gcc-riscv64-linux-gnu gcc-x86-64-linux-gnu
       - name: Run patches
-        run: patch < ../patches/*.patch
+        run: patch -p1 < ../patches/*.patch
         working-directory: ./rust
       - name: Build rust-std distribution artifacts
         run: ./x dist --config ../rust-config.toml rust-std --ci false
